--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "handlebars": "^4.0.5",
     "jquery": "^2.1.4"
   },
   "devDependencies": {
@@ -25,7 +26,7 @@
     "grunt-open": "^0.2.3",
     "grunt-webpack": "^1.0.11",
     "handlebars": "^4.0.5",
-    "handlebars-loader": "^1.3.0",
+    "handlebars-loader": "^1.1.4",
     "html-loader": "^0.4.3",
     "load-grunt-config": "^0.19.2",
     "node-libs-browser": "^1.0.0",
